Updating about.html

--- a/about.html
+++ b/about.html
@@ -4,4 +4,4 @@ title: About
 header-img: "img/about-bg.png"
 ---
 
-<p></p>
+<p>Hello, I've been a self-taught programmer for 3-4 years now. So far it's been a great experience learning the intricacies of computer programming. At times I would want to give up, only to end up not making that wrong turn. I keep a strong head on my shoulders and push through. With paitence you can move mountains!</p>
